--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ external_link:
 filename_case: 0
 render_drafts: false
 post_asset_folder: false
-relative_link: false
+relative_link: /hexo0528/
 future: true
 syntax_highlighter: highlight.js
 highlight:
